# Stellar-Astronomy-Laboratory-Workshop-S09-2021

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  Manifest.toml  Project.toml  README.md  clippy.toml  crates.js  document.bash  index.html  julia.bash  search-index.js  settings.html  source-files.js
.cargo/: config.toml
assets/: katex-header.html
kidou/: all.html  constant.PADDING.html  constant.PI.html  fn.main.html  index.html  sidebar-items.js  type.F.html  type.I.html
libc/: constant.ABS_CNT.html  constant.CANFD_MAX_DLEN.html  constant.CANFD_MTU.html  constant.CAN_MAX_DLEN.html  constant.CAN_MTU.html  constant.EV_CNT.html  constant.FANOTIFY_METADATA_VERSION.html  constant.FAN_ACCESS.html  constant.FAN_ACCESS_PERM.html  constant.FAN_ALLOW.html  constant.FAN_CLOSE.html  constant.FAN_CLOSE_NOWRITE.html  constant.FAN_CLOSE_WRITE.html  constant.FAN_DENY.html  constant.FAN_EVENT_ON_CHILD.html  constant.FAN_MODIFY.html  constant.FAN_ONDIR.html  constant.FAN_OPEN.html  constant.FAN_OPEN_PERM.html  constant.FAN_Q_OVERFLOW.html  constant.FF_CNT.html  constant.INPUT_PROP_CNT.html  constant.IN_ACCESS.html  constant.IN_ALL_EVENTS.html  constant.IN_ATTRIB.html  constant.IN_CLOSE.html  constant.IN_CLOSE_NOWRITE.html  constant.IN_CLOSE_WRITE.html  constant.IN_CREATE.html  constant.IN_DELETE.html  constant.IN_DELETE_SELF.html  constant.IN_DONT_FOLLOW.html  constant.IN_IGNORED.html  constant.IN_ISDIR.html  constant.IN_MODIFY.html  constant.IN_MOVE.html  constant.IN_MOVED_FROM.html  constant.IN_MOVED_TO.html  constant.IN_MOVE_SELF.html  constant.IN_ONESHOT.html  (+409 more)
notebooks/: m1.jl
rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
rand_distr/: all.html  enum.BetaError.html  enum.BinomialError.html  enum.CauchyError.html  enum.ChiSquaredError.html  enum.DirichletError.html  enum.ExpError.html  enum.FisherFError.html  enum.FrechetError.html  enum.GammaError.html  enum.GeoError.html  enum.GumbelError.html  enum.HyperGeoError.html  enum.InverseGaussianError.html  enum.NormalError.html  enum.NormalInverseGaussianError.html  enum.ParetoError.html  enum.PertError.html  enum.PoissonError.html  enum.SkewNormalError.html  enum.TriangularError.html  enum.WeibullError.html  enum.WeightedError.html  enum.ZetaError.html  enum.ZipfError.html  index.html  struct.Dirichlet.html  struct.Standard.html  struct.WeightedIndex.html  trait.Distribution.html
report/: report.tex
scripts/: orbits.jl  plot.jl  simulations.jl
src/: main.rs
syn/: enum.ReturnType.html  enum.TraitBoundModifier.html  enum.WherePredicate.html  index.html  struct.Abi.html  struct.BareFnArg.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Generics.html  (+25 more)
(+233 files in other folders)
