[package]
name = "kidou"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@tuta.io>"]
edition = "2018"
description = "Calculate the orbits of globular clusters in a model of the Galaxy potential"
documentation = "???"
readme = "README.md"
homepage = "https://gitlab.com/paveloom-g/university/stellar-astronomy-laboratory-workshop-s09-2021"
repository = "https://gitlab.com/paveloom-g/university/stellar-astronomy-laboratory-workshop-s09-2021"
license-file = "LICENSE.md"
keywords = ["astronomy", "globular", "clusters", "orbits", "integration"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
byteorder = "=1.4.3"
clap = "=2.33.3"
csv = "=1.1.6"
rand = "=0.8.4"
rand_distr = "=0.4.2"
rand_xoshiro = "=0.6.0"
serde = {version = "=1.0.130", features = ["derive"]}
