[package]
name = "kidou"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.56"
description = "Calculate the orbits of globular clusters in a model of the Galaxy potential"
documentation = "https://github.com/paveloom-university/Stellar-Astronomy-Laboratory-Workshop-S09-2021"
readme = "README.md"
homepage = "https://github.com/paveloom-university/Stellar-Astronomy-Laboratory-Workshop-S09-2021"
repository = "https://github.com/paveloom-university/Stellar-Astronomy-Laboratory-Workshop-S09-2021"
license-file = "LICENSE.md"
keywords = ["astronomy", "globular", "clusters", "orbits", "integration"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
byteorder = "=1.4.3"
clap = "=2.33.3"
csv = "=1.1.6"
rand = "=0.8.4"
rand_distr = "=0.4.2"
rand_xoshiro = "=0.6.0"
serde = {version = "=1.0.130", features = ["derive"]}
